--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
     <!-- main image -->
     <div class="container d-flex my-5" id="main-container">
-        <div class="col-7" id="main-image-container"><a href="#"><img src="img/games_games_review/baldurs-gate-3.jpg" class="main-image"></a></div>
+        <div class="col-7" id="main-image-container"><a href="review.html"><img src="img/games_games_review/baldurs-gate-3.jpg" class="main-image"></a></div>
         <div class="col-5" id="main-text-container">
             <div class="m-5">
-                <a href="#" class="-main-text">Baldur's Gate 3<br>É o jogo destaque do mês de agosto.
+                <a href="review.html" class="-main-text">Baldur's Gate 3<br>É o jogo destaque do mês de agosto.
                 <br>
                 <span class="-main-subtext">
                     Veja as impressões iniciais do aclamado RPG...
@@ -237,9 +237,9 @@
         </div>
         <div class="row gx-md-5">
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/games_games_review/baldurs-gate-3 (3).jpg" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="review.html"><img src="img/games_games_review/baldurs-gate-3 (3).jpg" id="img2"></a></div>
                 <div class="small-container">
-                    <a href="#">
+                    <a href="review.html">
                         <h2>Baldur's Gate 3: Das mesas aos consoles!</h2>
                     </a>
                 <div class="row">
@@ -325,9 +325,9 @@
         </div>
         <div class="row gx-md-5">
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/gold/chrono trigger.png" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="review_2.html"><img src="img/gold/chrono trigger.png" id="img2"></a></div>
                 <div class="small-container" id="small-container-retro">
-                    <a href="#">
+                    <a href="review_2.html">
                         <h2>Chrono Trigger: Uma Jornada através do Tempo.</h2>
                     </a>
                 <div class="row">
@@ -388,7 +388,7 @@
         <div class="card mb-3" id="card-news" style="max-width: 800px; max-height: 200px;">
             <div class="row g-0">
               <div class="col-md-4" id="card-img">
-                <a href="#"><img src="img/news/starfield-dinossauros_yrN9aJc (1).jpg" class="img-fluid" id="-card-img" alt=""></a>
+                <a href="noticias.html"><img src="img/news/starfield-dinossauros_yrN9aJc (1).jpg" class="img-fluid" id="-card-img" alt=""></a>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
