--- a/review_2.html
+++ b/review_2.html
@@ -55,7 +55,7 @@
 
       <div class="container" id="imagem">
         <div class="col-md-12">
-          <img src="img/img1.jpeg" class="img-fluid" alt="#">
+          <img src="img/review2/chrono_t1 (2).jpeg" class="img-fluid" alt="#">
         </div>
       </div> 
 
@@ -66,19 +66,19 @@
   
         <div class="col-md-9">
           <div >
-            <p class="text-1">Baldur's Gate 3 é um jogo de RPG baseado no universo de Dungeons & Dragons, desenvolvido pela Larian Studios e lançado em agosto de 2023. O jogo é uma sequência dos clássicos Baldur's Gate e Baldur's Gate II, feitos pela BioWare, e traz uma nova história, personagens e mecânicas para os fãs do gênero. Nesta review, vou analisar alguns aspectos do jogo, como a criação de personagem, o combate, a narrativa e a liberdade de escolha. <br> A criação de personagem é um dos pontos fortes do jogo, pois permite uma personalização detalhada e fiel ao sistema de D&D. Podemos escolher entre diversas raças, classes, habilidades, antecedentes e aparências para o nosso herói ou heroína, que se envolve em uma trama envolvendo uma larva alienígena que infecta o seu cérebro. O jogo também oferece alguns personagens pré-definidos, que podem ser usados como companheiros ou romances ao longo da aventura.</p>
+            <p class="text-1">Chrono Trigger é um jogo de RPG eletrônico que foi lançado pela primeira vez para o Super Nintendo em 1995, e depois para outras plataformas como PlayStation, Nintendo DS, iOS, Android e Windows. O jogo é considerado um clássico do gênero, e recebeu elogios da crítica e do público por sua história, jogabilidade, gráficos e trilha sonora. <br> A história de Chrono Trigger segue um grupo de aventureiros que viajam através do tempo para impedir uma catástrofe global. O jogo apresenta vários finais diferentes, dependendo das escolhas e ações do jogador ao longo da aventura. O jogo também possui missões secundárias que exploram o desenvolvimento dos personagens e seus relacionamentos.</p>
           </div>
           <div class="afasta">
-            <img src="img/img2.jpeg" class="img-fluid" alt="#">
+            <img src="img/review2/chrono_t2.jpeg" class="img-fluid" alt="#">
           </div>
           <div >
-            <p class="text-1">O combate é outro aspecto que se destaca em Baldur's Gate 3, pois é baseado em turnos e requer estratégia e criatividade. Podemos usar diferentes tipos de armas, magias, itens e habilidades especiais para enfrentar os inimigos, que variam desde goblins e zumbis até dragões e demônios. O jogo também permite interagir com o cenário, usando objetos inflamáveis, portas, janelas e até mesmo cadáveres como recursos para vencer as batalhas. O combate é desafiador e divertido, mas também pode ser frustrante em alguns momentos por causa da aleatoriedade dos dados. <br> A narrativa é um dos pontos mais elogiados do jogo, pois apresenta uma história envolvente, cheia de reviravoltas, mistérios e escolhas morais. O jogo conta com um elenco de personagens carismáticos, bem escritos e dublados, que podem se tornar nossos aliados ou inimigos dependendo das nossas ações. O jogo também oferece uma grande liberdade de escolha, permitindo resolver os problemas de várias formas diferentes, desde o diálogo até a violência. As escolhas têm consequências reais no mundo do jogo, afetando o destino dos personagens e o desfecho da história</p>
+            <p class="text-1">A jogabilidade de Chrono Trigger é baseada no sistema de batalha Active Time Battle, que permite que os personagens ataquem quando suas barras de tempo estão cheias. O jogo também introduziu o conceito de "Techs", habilidades especiais que podem ser combinadas entre os personagens para criar ataques mais poderosos e variados. O jogo também permite que o jogador explore livremente os diferentes períodos históricos, interagindo com personagens e objetos que podem afetar o presente e o futuro. <br> A trilha sonora de Chrono Trigger foi composta por Yasunori Mitsuda, com algumas faixas adicionais de Nobuo Uematsu. A música do jogo é considerada uma das melhores da história dos videogames, e possui temas memoráveis e emocionantes que acompanham as cenas e os cenários do jogo. A música também utiliza instrumentos e estilos musicais de diferentes épocas, criando uma atmosfera única para cada período temporal.</p>
           </div>
           <div class="afasta">
-            <img src="img/img3.jpeg" class="img-fluid" alt="#">
+            <img src="img/review2/chrono_t3.jpeg" class="img-fluid" alt="#">
           </div>
           <div class="texto">
-            <p>Baldur's Gate 3 é um jogo que merece ser jogado por todos os fãs de RPGs e de D&D. É um jogo que nos faz sentir parte de um universo fantástico, cheio de possibilidades e surpresas. É um jogo que nos faz rir, chorar, torcer e temer pelos nossos personagens. É um jogo que nos faz querer jogar novamente, para ver o que mudaria se fizéssemos outras escolhas. É um jogo que nos faz querer jogar com os amigos, para compartilhar as experiências e as emoções. É um jogo que nos faz querer jogar mais D&D. É um jogo que nos faz querer jogar mais Baldur's Gate 3. <br>
+            <p>Chrono Trigger é um jogo que marcou a história dos RPGs eletrônicos, e que continua sendo admirado e apreciado por muitos fãs até hoje. O jogo é uma obra-prima da Square, que reuniu alguns dos maiores nomes da indústria, como Hironobu Sakaguchi, Yuji Horii e Akira Toriyama. Chrono Trigger é um jogo que vale a pena jogar, seja pela primeira vez ou pela décima vez. <br>
             
              </p>
           </div>
@@ -119,19 +119,19 @@
       <div class="col-md-12 container1 container">
         <div class="text2 d-flex">
         <i class="bi bi-person user"></i>
-        <p>Baldur's Gate 3 é um jogo incrível que me fez sentir como se estivesse jogando uma sessão de D&D com os meus amigos. O jogo tem uma história envolvente, personagens carismáticos, combate desafiador e muita liberdade de escolha. Eu adorei explorar o mundo de Forgotten Realms, interagir com as diferentes raças e facções, e descobrir os segredos da trama. </p>
+        <p>Chrono Trigger é um jogo que me impressionou pela sua riqueza de detalhes e pela sua narrativa envolvente. O jogo me fez sentir parte de uma aventura épica que atravessa o tempo e o espaço, e me emocionou com seus personagens carismáticos e seus momentos marcantes. </p>
         </div>
         <div class="text3 d-flex">
             <i class="bi bi-person user"></i>
-            <p>Eu sou um grande fã da franquia Baldur's Gate e estava ansioso pelo terceiro jogo. Eu não me decepcionei, pois Baldur's Gate 3 é uma obra-prima do gênero RPG. O jogo é fiel ao espírito de Dungeons & Dragons, com regras complexas, mas intuitivas, e muita criatividade na resolução dos problemas. O jogo também tem uma narrativa excelente, com diálogos bem escritos e dublados, e escolhas que afetam o desenrolar da história.</p>
+            <p>Chrono Trigger é um jogo que me divertiu pela sua jogabilidade dinâmica e pela sua variedade de opções. O jogo me ofereceu muitas possibilidades de explorar os diferentes mundos e épocas, e de combinar as habilidades dos personagens para criar estratégias de combate. O jogo também me surpreendeu com seus finais alternativos e suas missões secundárias.</p>
         </div>
         <div class="text4 d-flex">
             <i class="bi bi-person user"></i>
-            <p>Baldur's Gate 3 é um jogo que me surpreendeu positivamente em todos os aspectos. O jogo é uma homenagem aos RPGs de mesa e estabelece um novo patamar para o gênero RPG. O jogo tem uma jogabilidade viciante, com combate baseado em turnos, magia, furtividade e diplomacia. </p>
+            <p>Chrono Trigger é um jogo que me encantou pela sua trilha sonora magnífica e pela sua arte incrível. O jogo me transportou para os diferentes cenários e atmosferas do jogo com suas músicas memoráveis e emocionantes, que combinam com os estilos e instrumentos de cada época. O jogo também me maravilhou com seus gráficos coloridos e seus desenhos expressivos, que foram criados por grandes nomes da indústria. </p>
         </div>
         <div class="text5 d-flex">
             <i class="bi bi-person user"></i>
-            <p>Baldur's Gate 3 é um jogo incrível que me conquistou desde o primeiro momento. É um RPG de mesa digital, com uma história envolvente, personagens marcantes, combate desafiador e muita liberdade de escolha. Eu me senti como se estivesse jogando uma sessão de D&D com meus amigos, mas com gráficos impressionantes e uma dublagem excelente.</p>
+            <p> Chrono Trigger é um jogo que me inspirou pela sua criatividade e pela sua originalidade. O jogo me apresentou uma história única e inovadora, que mistura elementos de ficção científica, fantasia e mitologia. O jogo também me mostrou uma visão de como as nossas ações podem afetar o passado, o presente e o futuro, e de como podemos mudar o destino do mundo.</p>
         </div>
         
     </div>
