--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                 </div>
             </div>
             <div class="col-12 col-md-6" id="section-reviews">
-                <div class="small-image-container center-image"><a href="#"><img src="img/games_games_review/sekiro2.png" id="img2"></a></div>
+                <div class="small-image-container center-image"><a href="review3.html"><img src="img/games_games_review/sekiro2.png" id="img2"></a></div>
                 <div class="small-container">
-                    <a href="#">
+                    <a href="review3.html">
                         <h2>Sekiro: Shadows Die Twice: Espadas afiadas e sofrimento! </h2>
                     </a>
                 <div class="row">
@@ -392,7 +392,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">A história por trás de Starfield, o jogo que demorou 25 anos para nascer.</a></h5>
+                  <h4 class="card-title"><a href="noticias.html" id="card-title">A história por trás de Starfield, o jogo que demorou 25 anos para nascer.</a></h5>
                   <p class="card-text text-light">Como a Bethesda criou seu novo RPG espacial, inspirado em clássicos da ficção científica e em sua própria paixão pelo cosmos.</p>
                   <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
                 </div>
