--- a/noticias.html
+++ b/noticias.html
@@ -33,14 +33,14 @@
                     Games
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#games-container">Reviews</a></li>
-                    <li><a class="dropdown-item" href="#games-retro">G(old)</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#noticias">Notícias</a></li>
-                </ul>
+                  <li><a class="dropdown-item" href="index.html">Reviews</a></li>
+                  <li><a class="dropdown-item" href="index.html">G(old)</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="index.html">Notícias</a></li>
+              </ul>
             </li>
           <li class="nav-item">
-            <a class="nav-link active"  id="nav-botao" aria-current="page" href="#noticias">Notícias</a>
+            <a class="nav-link active"  id="nav-botao" aria-current="page" href="index.html">Notícias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Login.html"><i class="bi bi-person-circle roxo"></i></a>
