--- a/review_2.html
+++ b/review_2.html
@@ -33,14 +33,14 @@
                     Games
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#games-container">Reviews</a></li>
-                    <li><a class="dropdown-item" href="#games-retro">G(old)</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#noticias">Notícias</a></li>
-                </ul>
+                  <li><a class="dropdown-item" href="index.html">Reviews</a></li>
+                  <li><a class="dropdown-item" href="index.html">G(old)</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="index.html">Notícias</a></li>
+              </ul>
             </li>
           <li class="nav-item">
-            <a class="nav-link active"  id="nav-botao" aria-current="page" href="#noticias">Notícias</a>
+            <a class="nav-link active"  id="nav-botao" aria-current="page" href="index.html">Notícias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Login.html"><i class="bi bi-person-circle roxo"></i></a>
@@ -89,16 +89,15 @@
           <div class="comprar-container">
            
             <!-- Comprar -->
-            <button type="button" class="btn btn-info col-12">Comprar</button>
+            <button type="button" class="btn btn-info col-12" id="btn-comprar"><a href="https://store.steampowered.com/app/613830/CHRONO_TRIGGER/" target="_blank">Comprar</a></button>
 
             <div class="col-md-12">
               <div class="container2 py-4 px-4" id="comprar-esp">
-                <span class="comprar-span"><p>Desenvolvedora: Larian Studios</p></span>
-                  <p class="comprar-p">Numero de Jogadores: 450 mil</p>
-                  <p class="comprar-p">Data de Lançamento: 3 de Agosto</p>
-                  <p class="comprar-p">Ultima Atualização: 9 de Agosto</p>
-                  <p class="comprar-p">Motor do jogo: Divinity 4.0 Engine</p>
-                  <p class="comprar-p">Classificação etaria: 16 Anos</p>
+                <span class="comprar-span"><p>Desenvolvedora: Square Enix</p></span>
+                  <p class="comprar-p">Gênero: JRPG, Aventura</p>
+                  <p class="comprar-p">Data de Lançamento: 11/mar./1985</p>
+                  <p class="comprar-p">Plataforma: Super Nintendo, Nintendo DS</p>
+                  <p class="comprar-p">Classificação etaria: 12 Anos</p>
               </div>
             
             </div>
