--- a/Login.html
+++ b/Login.html
@@ -7,6 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="login.css">
 
 </head>
@@ -25,14 +26,14 @@
                   Games
               </a>
               <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Reviews</a></li>
-                  <li><a class="dropdown-item" href="#">G(old)</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">New</a></li>
-              </ul>
+                <li><a class="dropdown-item" href="index.html">Reviews</a></li>
+                <li><a class="dropdown-item" href="index.html">G(old)</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="index.html">Notícias</a></li>
+            </ul>
           </li>
         <li class="nav-item">
-          <a class="nav-link active"  id="nav-botao" aria-current="page" href="#">News</a>
+            <a class="nav-link active"  id="nav-botao" aria-current="page" href="index.html">Notícias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Login.html"><i class="bi bi-person-circle roxo"></i></a>
