--- a/review.html
+++ b/review.html
@@ -33,14 +33,14 @@
                     Games
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#games-container">Reviews</a></li>
-                    <li><a class="dropdown-item" href="#games-retro">G(old)</a></li>
+                    <li><a class="dropdown-item" href="index.html">Reviews</a></li>
+                    <li><a class="dropdown-item" href="index.html">G(old)</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#noticias">Notícias</a></li>
+                    <li><a class="dropdown-item" href="index.html">Notícias</a></li>
                 </ul>
             </li>
           <li class="nav-item">
-            <a class="nav-link active"  id="nav-botao" aria-current="page" href="#noticias">Notícias</a>
+            <a class="nav-link active"  id="nav-botao" aria-current="page" href="index.html">Notícias</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Login.html"><i class="bi bi-person-circle roxo"></i></a>
@@ -89,7 +89,7 @@
           <div class="comprar-container">
            
             <!-- Comprar -->
-            <button type="button" class="btn btn-info col-12">Comprar</button>
+            <button type="button" class="btn btn-info col-12" id="btn-comprar"><a href="https://store.steampowered.com/app/1086940/Baldurs_Gate_3/" target="_blank">Comprar</a></button>
 
             <div class="col-md-12">
               <div class="container2 py-4 px-4" id="comprar-esp">
