--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="noticias.html" id="card-title">A história por trás de Starfield, o jogo que demorou 25 anos para nascer.</a></h5>
+                  <h4 class="card-title"><a href="noticias.html" id="card-title">A história por trás de Starfield, o jogo que demorou 25 anos para nascer</a></h5>
                   <p class="card-text text-light">Como a Bethesda criou seu novo RPG espacial, inspirado em clássicos da ficção científica e em sua própria paixão pelo cosmos.</p>
-                  <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-white-50">Ultíma atualização há 3 minutos</small></p>
                 </div>
               </div>
             </div>
@@ -407,9 +407,9 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Conheça a geladeira gamer da Heineken que resfria a cerveja e o PC.</a></h5>
+                  <h4 class="card-title"><a href="#" id="card-title">Conheça a geladeira gamer da Heineken que resfria a cerveja e o PC</a></h5>
                   <p class="card-text text-light">A Heineken, conhecida mundialmente por suas cervejas, decidiu entrar no universo gamer de uma maneira inusitada.</p>
-                  <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-white-50">Ultíma atualização há 30 minutos</small></p>
                 </div>
               </div>
             </div>
@@ -424,7 +424,7 @@
                 <div class="card-body">
                   <h4 class="card-title"><a href="#" id="card-title">Xbox: jogos com até 90% de desconto para Xbox One e Series S|X</a></h5>
                   <p class="card-text text-light">Aproveite as ofertas imperdíveis da Microsoft Store e garantea os melhores títulos da sua plataforma favorita.</p>
-                  <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-white-50">Ultíma atualização há 40 minutos</small></p>
                 </div>
               </div>
             </div>
@@ -437,9 +437,9 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">PlayStation Plus aumenta preço do plano anual no Brasil; veja os novos valores.</a></h5>
+                  <h4 class="card-title"><a href="#" id="card-title">PlayStation Plus aumenta preço do plano anual no Brasil; veja os novos valores</a></h5>
                   <p class="card-text text-light">Serviço de assinatura da Sony reajusta seus valores para acompanhar a inflação e o mercado internacional.</p>
-                  <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-white-50">Ultíma atualização há 59 minutos</small></p>
                 </div>
               </div>
             </div>
@@ -452,9 +452,9 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Diablo IV entra em promoção e dá bônus para jogadores; veja os preços.</a></h5>
+                  <h4 class="card-title"><a href="#" id="card-title">Diablo IV entra em promoção e dá bônus para jogadores; veja os preços</a></h5>
                   <p class="card-text text-light">O novo capítulo da saga de RPG de ação da Blizzard está com descontos imperdíveis.</p>
-                  <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-white-50">Ultíma atualização há 2 horas</small></p>
                 </div>
               </div>
             </div>
@@ -467,9 +467,9 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title"><a href="#" id="card-title">Baldur's Gate 3 tem decepcionado jogadores que escolheram caminho do mal.</a></h5>
+                  <h4 class="card-title"><a href="#" id="card-title">Baldur's Gate 3 tem decepcionado jogadores que escolheram caminho do mal</a></h5>
                   <p class="card-text text-light">O RPG de fantasia da Larian Studios apresenta uma narrativa desbalanceada e limitada para quem opta por alinhamentos malignos, segundo críticas dos fãs.</p>
-                  <p class="card-text"><small class="text-white-50">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-white-50">Ultíma atualização há 3 horas</small></p>
                 </div>
               </div>
             </div>
