--- a/noticias.html
+++ b/noticias.html
@@ -66,7 +66,7 @@
 
         <div class="col-md-9">
           <div>
-            <h1 class="roxo">A história por trás de Starfield, o jogo que demorou 25 anos para nascer.</h1>
+            <h1 class="roxo">A história por trás de Starfield, o jogo que demorou 25 anos para nascer</h1>
           </div>
           <div>
             <p class="text-1">Sendo um dos jogos mais aguardados para 2023, o RPG de exploração espacial é a nova aposta da Bethesda depois alguns anos sem uma nova IP (propriedade intelectual), dando início para uma nova franquia. E quando dizemos alguns anos, não é pouca coisa: a desenvolvedora trabalha na ideia do game há duas décadas e meia. <br> Mas afinal, por que Starfield levou 25 anos para ser feito? Por que a empresa demorou tanto tempo desenvolvendo o jogo? Vamos responder essa pergunta a seguir!</p>
